[project]
name = "ai-agents-with-langchain-and-langgraph"
version = "0.1.0"
description = "ai-agents-with-langchain-and-langgraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "python-dotenv>=1.2.2",
]
